--- a/.github/workflow/yarn.yml
+++ b/.github/workflow/yarn.yml
@@ -2,7 +2,7 @@ name: Build and Test
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   install-and-test:
     runs-on: ubuntu-latest
