--- a/.github/workflow/yarn.yml
+++ b/.github/workflow/yarn.yml
@@ -1,20 +1,33 @@
-name: Build and Test
-on:
-  push:
-    branches:
-      - main
+
+on: push
+name: Build Angular
 jobs:
-  install-and-test:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
-      - uses: actions/checkout@main
-      - name: Use Node.js 11
-        uses: actions/setup-node@main
+      - uses: actions/checkout@v1
+
+      - name: Cache node modules
+        uses: actions/cache@v1
         with:
-          node-version: 11
-      - name: Build, lint and test
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm install and npm run build
         run: |
-          yarn
-          yarn lint
-          yarn test --watch=false --browsers=ChromeHeadless
-          yarn build --prod
+          npm i
+          npm run build:prod
+      - name: Push Build to Releases
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "dist/angular-githubaction/*"
+          token: ${{ secrets.TOKEN }}
