--- a/.github/workflows/yarn.yml
+++ b/.github/workflows/yarn.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Build, lint and test
         run: |
           yarn
-          yarn list
+          yarn lint
           yarn test --watch=false --browsers=ChromeHeadless
           yarn build --prod
