--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@angular/router": "~13.3.0",
     "express": "^4.17.3",
     "path": "^0.12.7",
-    "rxjs": "~7.5.0",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "typescript": "~4.6.2",
     "zone.js": "~0.11.4"
