--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "express": "^4.17.3",
+    "moment": "^2.29.3",
     "path": "^0.12.7",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
