--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "heroku-postbuild": "ng build --prod",
     "ng": "ng",
-    "start": "node server.js",
+    "start": "node server.js --proxy-config proxy.conf.json",
     "local-start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
