--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "it-academy-fe",
   "version": "0.0.0",
   "scripts": {
-    "heroku-postbuild": "ng build --prod",
+    "heroku-postbuild": "ng build --prod --proxy-config proxy.conf.json",
     "ng": "ng",
-    "start": "node server.js --proxy-config proxy.conf.json",
+    "start": "node server.js",
     "local-start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
