--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "it-academy-fe",
   "version": "0.0.0",
   "scripts": {
-    "heroku-postbuild": "ng build --prod --proxy-config proxy.conf.json",
+    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
     "start": "node server.js",
     "local-start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "build": "ng build  --proxy-config proxy.conf.json",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
