--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "typescript": "~4.6.2",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
